applicationをリネーム

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <canvas id="output" />
-  <py-script src="application.py"></py-script>
+  <py-script src="pyscript_app.py"></py-script>
 </body>
 
 </html>
