--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       - view.py
       - input.py
       - values.py
+      - frame.py
       - pyscript_repository.py
       - pyscript_controller.py
       - pyscript_view.py
