クラス移動 ・抽象クラスをinterface.pyに ・Fontクラスをvalues.pyに

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       - input.py
       - values.py
       - frame.py
+      - interface.py
       - pyscript_repository.py
       - pyscript_controller.py
       - pyscript_view.py
