ログ出力関数を外部から渡せるようにした

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
       - pyscript_repository.py
       - pyscript_controller.py
       - pyscript_view.py
+      - pyscript_util.py
   </py-env>
 </head>
 
